<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item android:id="@+id/nav_gallery" android:title="@string/Item_menu1" android:icon="@drawable/ic_iconmonstr_calculator_6" />
        <item android:id="@+id/nav_home" android:title="@string/Item_menu2" android:icon="@drawable/ic_iconmonstr_calculator_8"/>
        <item android:id="@+id/mortgage" android:title="@string/Item_menu3" android:icon="@drawable/ic_iconmonstr_home_7"/>
        <item android:id="@+id/currency" android:title="@string/Item_menu4" android:icon="@drawable/ic_iconmonstr_coin_5"/>
        <item android:id="@+id/length" android:title="@string/Item_menu5" android:icon="@drawable/ic_iconmonstr_ruler_27"/>
        <item android:id="@+id/area" android:title="@string/Item_menu6" android:icon="@drawable/ic_iconmonstr_ruler_17"/>
        <item android:id="@+id/volume" android:title="@string/Item_menu7" android:icon="@drawable/ic_iconmonstr_cube_6"/>
        <item android:id="@+id/temperature" android:title="@string/Item_menu8" android:icon="@drawable/ic_iconmonstr_weather_134"/>
        <item android:id="@+id/speed" android:title="@string/Item_menu9" android:icon="@drawable/ic_iconmonstr_time_19"/>
        <item android:id="@+id/time" android:title="@string/Item_menu10" android:icon="@drawable/ic_iconmonstr_time_5"/>
        <item android:id="@+id/mass" android:title="@string/Item_menu11" android:icon="@drawable/ic_balance_svgrepo_com"/>
    </group>

</menu>
